# ntt

./: .dockerignore  .env  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  structuration.py
.circleci/: config.yml
docs/: config.py
docs/source/: conf.py  credits.rst  getting-started.rst  index.rst  notebooks.rst  ntt-workflows.rst  ntt.draw.rst  ntt.frames.rst  ntt.rst  ntt.sounds.rst  ntt.utils.rst  ntt.videos.rst
docs/source/_static/: custom.css
docs/source/_templates/: package.rst_t
docs/source/api/: ntt.draw.rst  ntt.frames.rst  ntt.rst  ntt.sounds.rst  ntt.utils.rst  ntt.videos.rst
docs/source/getting-started/: install.rst  overview.rst
docs/source/notebooks/: Easing_effets_visuels_1.nblink  Easing_effets_visuels_3.nblink  draw_bbox_with_ntt.nblink  draw_cycles_in_perspective.nblink  draw_flags_with_ntt.nblink  draw_pose_with_ntt.nblink  draw_with_ntt.nblink  easing_functionsv2.nblink  easing_functionsv3.nblink  from_above_visus.nblink  generate_augmentation_v1.nblink  generate_augmentations.nblink  install_ntt.nblink  intreraction_easing.nblink  swim_cycles_analysis.nblink  swim_metadata.nblink  swim_stats.nblink
docs/source/ntt-workflows/: pipeline-ex-1.rst
examples/: ex_count_ball_bounce.py  ex_cut_video.py  ex_draw_flashlight.py  ex_draw_piscine.py  ex_draw_polygone.py  ex_draw_primitives.py  ex_generate_index.py  ex_json_to_text.py  ex_nth_frame_extraction.py  ex_overlay_images.py  ex_peak_count.py  ex_processing_blur.py  ex_rotate_video_randomly.py  ex_shake_video.py  ex_simple_crop_image.py  ex_simple_frame_extraction.py  ex_simple_gap_measure.py  ex_simple_peak_detection.py  ex_sound_Vid2_decale.py  ex_sound_generation_square.py  ex_sound_random_to_start.py  ex_sound_vid2_decale.py  ex_sound_video2_shifted.py  ex_split_video.py  ex_synchro_soundtracks.py  ex_text_to_json.py  ex_translate_video.py  ex_video_overlay.py  ex_video_show.py  ex_video_zoom.py  ex_videos_peak.py
frames/: frame_extraction.py
frames/tests/: test_frame_extraction.py
ntt/frames/: n_frame_extraction.py
ntt/frames/examples/: nth_frame_extraction.py  simple_crop_image.py  simple_frame_extraction.py
ntt/frames/tests/: test_frame_extraction.py
ntt/sounds/: Sound_gap_measure.py  Sound_generation.py  synchro_soundtracks.py
ntt/sounds/examples/: simple_gap_measure.py
samples/: 2023_CF_Rennes_freestyle_hommes_50_finaleA.json  org_jtt.json  org_ttj.txt  ref_features_bip.npy
scripts/: example_change_video_speed.py  example_extract_exif_from_image.py  example_generate_and_stitch_perspective_videos.py  example_generate_annotated_image.py  example_generate_random_image.py  example_generate_video_and_extract_first_frame.py  example_inject_exif_into_image.py  generate_primitives_showcase.py  generate_random_image.py
src/ntt/: __init__.py  __main__.py
src/ntt/draw/: polygone.py  primitives.py
src/ntt/frames/: crop_image.py  display.py  exif.py  frame_crop.py  frame_extraction.py  frame_generation.py  frame_loading.py  frame_overlay.py  generate.py  io.py  metadata.py  n_frame_extraction.py  overlay_two_images.py  processing.py  transform.py
src/ntt/sounds/: Sound_generation.py  sound_detection.py  sound_gap_measure.py  sound_generation.py
src/ntt/utils/: constants.py  debug.py  dicts.py  environment.py  files.py  generate.py  index.py  json_to_text.py  random.py  random_utils.py  strings.py  temporal.py  text_to_json.py
src/ntt/videos/: change_speed.py  compress.py  create_clip.py  crop.py  dimensions.py  display.py  duration.py  exif.py  generate.py  get_fourcc.py  info.py  io.py  overlay_videos.py  peak.py  shake_video.py  show.py  split_video.py  stich.py  video_fusion.py  video_generation.py  video_overlay.py  zoom.py
tests/: conftest.py  test_change_speed.py  test_change_video_speed.py  test_compress.py  test_copy_file.py  test_crop.py  test_crop_image.py  test_cut_video.py  test_debug.py  test_delete_and_create_folder.py  test_draw.py  test_draw_piscine.py  test_draw_swimming_pool.py  test_exif.py  test_frame_extraction.py  test_frame_transform.py  test_get_video_dimensions.py  test_image_metadata.py  test_io.py  test_overlay_images.py  test_peak_video.py  test_random_strings.py  test_random_video.py  test_scripts.py  test_sound_detection.py  test_sound_gap_measure.py  test_split_video.py  test_temporal_accuracy.py  test_video_crop.py  test_video_generation.py  test_video_info.py  test_video_io.py  test_video_overlay.py  test_videos_duration.py  test_videos_get_fourcc.py
