[build-system]
requires = [ "flit_core==3.9.0" ]
build-backend = "flit_core.buildapi"

[project]
name = "ntt"
dynamic = [ "version", "description" ]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Romain Vuillemot", email = "romain.vuillemot@gmail.com"},
]
maintainers = [
    {name = "Romain Vuillemot", email = "romain.vuillemot@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries"
]
requires-python = ">=3.7"
# eyed3, pydub are used by pyAudioAnalysis, but not installed as dependencies
dependencies = [
    "requests==2.31.0",
    "opencv-python==4.6.0.66",
    "ffmpeg-python==0.2.0",
    "moviepy==1.0.3",
    "scipy==1.12.0",
    "python-dotenv==1.0.1",
    "matplotlib==3.9.0",
    "pyAudioAnalysis==0.3.14",
    "eyed3==0.9.7",
    "pydub==0.25.1",
    "librosa==0.10.1",
    "Pillow==10.3.0",
    "exifread==3.5.1",
]

[project.urls]
GitHub = "https://github.com/centralelyon/ntt/"
Documentation = "https://ntt.readthedocs.io/"
Issues = "https://github.com/centralelyon/ntt/issues"
CI = "https://app.circleci.com/pipelines/github/centralelyon/ntt"

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "pytest==8.1.1",
    "flit==3.9.0",
    "sphinx==6.2.1",
    "sphinx-rtd-theme==1.2.2",
    "pydata-sphinx-theme==0.15.2",
    "sphinx-design==0.5.0",
    "nbsphinx==0.9.3",
    "nbsphinx-link==1.3.0",
    "ipywidgets==8.0.7",
    "sphinxcontrib-mermaid==0.9.2",
    "sphinx-copybutton==0.5.2",
]

[tool.flit.sdist]
exclude = [".circleci", ".vscode", ".gitignore", ".readthedocs.yaml"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*oneOf.*deprecated.*:DeprecationWarning",
    "ignore:.*parseString.*deprecated.*:DeprecationWarning",
    "ignore:.*resetCache.*deprecated.*:DeprecationWarning",
    "ignore:.*enablePackrat.*deprecated.*:DeprecationWarning",
]
